@@ -1,3 +1,10 @@
+2009-11-14  Matevz Tadel  <matevz.tadel@ijs.si>
+
+	Changes for latest openal.
+
+	* external/openal/openal.pl:
+	The build is now done in build/ directory.
+
 2009-08-11  Matevz Tadel  <matevz.tadel@ijs.si>
 
 	Proper rebuild of fltk - fltk-mt was left uninstalled.
